--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "config": "^3.3.11",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-validator": "^7.1.0"
+    "express-validator": "^7.1.0",
+    "mysql2": "^3.10.0",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@types/config": "^3.3.4",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.14.1",
+    "@types/sequelize": "^4.28.20",
+    "sequelize-cli": "^6.6.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
