--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "start": "ts-node src/app.ts",
+    "sequelize": "ts-node -r tsconfig-paths/register ./node_modules/.bin/sequelize"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +18,13 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "mysql2": "^3.10.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/config": "^3.3.4",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.1",
+    "@types/node": "^20.14.2",
     "@types/sequelize": "^4.28.20",
     "sequelize-cli": "^6.6.2",
     "ts-node-dev": "^2.0.0",
