--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "start": "ts-node src/app.ts",
-    "sequelize": "ts-node -r tsconfig-paths/register ./node_modules/.bin/sequelize"
+    "sequelize": "ts-node -r tsconfig-paths/register ./node_modules/.bin/sequelize",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
